[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/PlayerCollider.tres" type="Shape2D" id=5]
[ext_resource path="res://Effects/Particle.png" type="Texture" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.554545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "create_dust_effect"
}, {
"args": [  ],
"method": "create_dust_effect"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=9]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Persists",
]]
z_index = 1
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=[
"Player",
]]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 12
frame = 11

[node name="PlayerGun" parent="Sprite" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 1, 3 )

[node name="RocketBoots" type="Node2D" parent="Sprite"]
visible = false

[node name="Particles2D" type="Particles2D" parent="Sprite/RocketBoots"]
position = Vector2( -4, 10 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 4
one_shot = true
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="Sprite/RocketBoots"]
position = Vector2( 3, 10 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 4
one_shot = true
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = ExtResource( 5 )

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )
"anims/Wall Slide" = SubResource( 8 )

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 9 )

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -8 )
update_rotation = false
update_scale = false

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FireBulletTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = ExtResource( 5 )

[node name="PowerupDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="Collider" type="CollisionShape2D" parent="PowerupDetector"]
position = Vector2( 0, -7 )
shape = ExtResource( 5 )

[node name="LadderDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Collider" type="CollisionShape2D" parent="LadderDetector"]
position = Vector2( 0, -7 )
shape = ExtResource( 5 )
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="area_entered" from="PowerupDetector" to="." method="_on_PowerupDetector_area_entered"]
[connection signal="area_entered" from="LadderDetector" to="." method="_on_LadderDetector_area_entered"]
[connection signal="area_exited" from="LadderDetector" to="." method="_on_LadderDetector_area_exited"]
[connection signal="body_entered" from="LadderDetector" to="." method="_on_LadderDetector_body_entered"]
[connection signal="body_exited" from="LadderDetector" to="." method="_on_LadderDetector_body_exited"]

[editable path="Hurtbox"]
